--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
             <img src="public/img/jiras.png">
           </div>
           <div class="card-text">
+            <h5 class="language">React, Express, Scss</h5>
             <h2 class="card-title">Jira Report</h2>
             <p class="card-body">This project involves developing a comprehensive Jira report that provides valuable
               insights into team performance and task management. The report focuses on key metrics such as employee
@@ -188,6 +189,7 @@
             <img src="/public/img/Eslint.png">
           </div>
           <div class="card-text">
+            <h5 class="language">JavaScript</h5>
             <h2 class="card-title">Eslint Npm Package</h2>
             <p class="card-body">This npm package offers an essential ESLint plugin that contains custom rules
               specifically designed to improve code quality and enforce best practices. By integrating seamlessly with
@@ -203,6 +205,7 @@
             <img src="/public/img/Real estate.png">
           </div>
           <div class="card-text">
+            <h5 class="language">Laravel, Blade, Scss, MySql</h5>
             <h2 class="card-title">E-Commerce Real Estate</h2>
             <p class="card-body">This real estate project leverages AI to enhance the property search experience by
               providing personalized recommendations based on user preferences and behavior. The platform not only
@@ -219,6 +222,7 @@
             <img src="/public/img/phynix.png">
           </div>
           <div class="card-text">
+            <h5 class="language">Laravel, Blade, Scss</h5>
             <h2 class="card-title">Website for Media Marketing Agency</h2>
             <p class="card-body">This project focuses on developing an engaging and user-friendly homepage for a media
               marketing company. The homepage will serve as a dynamic introduction to the company's services,
@@ -235,6 +239,7 @@
             <img src="/public/img/face.png">
           </div>
           <div class="card-text">
+            <h5 class="language">Python, OpenCV</h5>
             <h2 class="card-title">Face Detection</h2>
             <p class="card-body">This project aims to implement a basic face detection system using Python and OpenCV.
               The objective is to develop a straightforward application that can identify and highlight faces in images
@@ -251,6 +256,7 @@
             <img src="/public/img/color.png">
           </div>
           <div class="card-text">
+            <h5 class="language">Python, OpenCV</h5>
             <h2 class="card-title">Color Detection</h2>
             <p class="card-body">This project focuses on developing a color detection system using Python and OpenCV.
               The goal is to create a simple application that can identify and classify colors within images or video
@@ -268,6 +274,7 @@
             <img src="/public/img/bmi.png">
           </div>
           <div class="card-text">
+            <h5 class="language">React, Scss</h5>
             <h2 class="card-title">BMI Calculator </h2>
             <p class="card-body">This project is a BMI Calculator application designed to provide users with an easy
               and efficient way to calculate their Body Mass Index (BMI). The interface allows users to select their
